fixed deck create
