# controllers/decks.js
@@ -30,26 +30,9 @@ decks.post('/', (req, res) => {
   models.Deck.create({
     subject: req.body.subject
   }).then(deck => {
-    const deckGroupPromises = [];
-    for (let i = 0; i < req.body.groupId.length; i++) {
-      const deckGroupPromise = models.Group_Deck.create({
-        DeckId: deck.id,
-        GroupId: req.body.groupId[i]
-      });
-
-      deckGroupPromises.push(deckGroupPromise);
-    }
-    Promise.all(deckGroupPromises)
-      .then(deckGroups => {
-        console.log(deckGroups);
-        deck.dataValues.deckGroups = deckGroups;
-        res.status(200).json(deck);
-      })
-      .catch(error => {
-        res.status(500).json({ error: error, message: 'Első catch' });
-      });
+    res.status(200).json(deck);
   }).catch(error => {
-    res.status(500).json({ error: error, message: 'Második catch' });
+    res.status(500).json({ error: error, message: error.message });
   });
 });
 
